show mexico capitals

--- a/index.html
+++ b/index.html
@@ -8,72 +8,11 @@
 <body>
 
 <h1 class="quiz-title">What is the capital of...</h1>
-<div class="grid-container">
-
-    <div class="grid-item">
-        <div class="card">
-            <div class="front"><p class="front-text">Mexico</p></div>
-            <div class="back"><p class="back-text">Mexico City</p></div>
-        </div>
-    </div>
-
-    <div class="grid-item">
-        <div class="card">
-            <div class="front"><p class="front-text">Papua New Guinea</p></div>
-            <div class="back"><p class="back-text">Port Moresby</p></div>
-        </div>
-    </div>
-
-    <div class="grid-item">
-        <div class="card">
-            <div class="front"><p class="front-text">Iceland</p></div>
-            <div class="back"><p class="back-text">Reykjavik</p></div>
-        </div>
-    </div>
-
-    <div class="grid-item">
-        <div class="card">
-            <div class="front"><p class="front-text">South Korea</p></div>
-            <div class="back"><p class="back-text">Seoul</p></div>
-        </div>
-    </div>
-
-    <div class="grid-item">
-        <div class="card">
-            <div class="front"><p class="front-text">Sweden</p></div>
-            <div class="back"><p class="back-text">Stockholm</p></div>
-        </div>
-    </div>
-
-    <div class="grid-item">
-        <div class="card">
-            <div class="front"><p class="front-text">Georgia</p></div>
-            <div class="back"><p class="back-text">Tbilisi</p></div>
-        </div>
-    </div>
-
-    <div class="grid-item">
-        <div class="card">
-            <div class="front"><p class="front-text">Honduras</p></div>
-            <div class="back"><p class="back-text">Tegucigalpa</p></div>
-        </div>
-    </div>
-
-    <div class="grid-item">
-        <div class="card">
-            <div class="front"><p class="front-text">Tunisia</p></div>
-            <div class="back"><p class="back-text">Tunis</p></div>
-        </div>
-    </div>
-
-    <div class="grid-item">
-        <div class="card">
-            <div class="front"><p class="front-text">Austria</p></div>
-            <div class="back"><p class="back-text">Vienna</p></div>
-        </div>
-    </div>
+<div class="grid-container" id="capital-grid">
 
 </div>
+
+<script src="script.js"></script>
 
 </body>
 </html>
